--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -1,4 +1,5 @@
-$main: #1363DF;
-$secondary: #47B5FF;
-$white: #DFF6FF;
-$dark: #06283D;
+$primary: #4cb1f6; 
+$secondary: #005691;
+$grey: #e8f1f5;
+$white: #f5f5f5;
+$dark: rgb(15, 15, 17);
