--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -5,7 +5,6 @@
 
 body {
     background-color: $dark;
-    font-size: 'Raleway', sans-serif;
 }
 
 .navbar_logo-container {
@@ -18,14 +17,14 @@ body {
             content: "<";
             display: inline-block;
             padding: 8px;
-            color: $secondary;
+            color: $primary;
         }
 
         &:after {
             content: "/>";
             display: inline-block;
             padding: 8px;
-            color: $secondary;
+            color: $primary;
         }
     }
 }
@@ -35,7 +34,7 @@ body {
         padding: 8px;
 
         span {
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             font-weight: 500;
             color: $white;
         }
