--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,4 +7,8 @@
 @import "./base/colors";
 @import "./components/navbar";
 @import "./components/banner";
+@import "./components/about";
+@import "./components/services";
+@import "./components/portfolio";
+@import "./components/contact";
 
