--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -1,5 +1,6 @@
 $primary: #4cb1f6; 
 $secondary: #005691;
-$grey: #e8f1f5;
+$grey: rgb(53, 50, 50);
+$grey-light: #888888;
 $white: #f5f5f5;
 $dark: rgb(15, 15, 17);
