--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -90,6 +90,7 @@
         padding: 30px;
         font-size: 50px;
         color: $white;
+        transition: 0.3s;
         
         span {
             margin-top: 20px;
