--- a/src/styles/components/_services.scss
+++ b/src/styles/components/_services.scss
@@ -15,6 +15,7 @@
         padding: 30px;
         font-size: 2.5rem;
         border-bottom: 5px solid transparent;
+        transition: 0.5s;
 
         h4 {
             font-size: 1.2rem;
