--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,5 +1,6 @@
 * {
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
@@ -9,38 +10,93 @@ html {
 
 body {
     background-color: $dark;
+    height: 100vh;
+}
+
+header {
+    width: 100%;
+    height: 60px;
+
+    nav {
+        position: fixed;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        margin: 0 auto;
+    }
+}
+
+.navbar_scroll {
+    background-color: $white;
+    transition: 0.6s;
+    z-index: 1;
+
+    .navbar_logo-container .navbar_logo {
+        color: $dark
+    }
+
+    .navbar_list li span {
+        color: $dark;
+    }
 }
 
 .navbar_logo-container {
     .navbar_logo {
         font-size: 1.7rem;
-        font-size: "Poppins", sans-serif!important;
+        font-size: "Poppins", sans-serif !important;
         color: $white;
+        transition: 0.4s;
 
         &:before {
             content: "<";
             display: inline-block;
             padding: 8px;
             color: $primary;
+            transition: 0.4s;
         }
 
         &:after {
             content: "/>";
-            display: inline-block;
-            padding: 8px;
+            @extend :before;
+        }
+
+        &:hover {
             color: $primary;
+
+            &:before,
+            &:after {
+                color: $white;
+            }
         }
     }
 }
 
 .navbar_list {
     li {
-        padding: 8px;
+        padding: 12px;
 
         span {
             font-size: 1.1rem;
             font-weight: 500;
             color: $white;
+
+            &:after {
+                content: "";
+                height: 2px;
+                width: 0;
+                background-color: $primary;
+                display: block;
+                transition: all 300ms;
+            }
+
+            &:hover {
+                color: $primary;
+
+                &:after {
+                    width: 100%;
+                }
+            }
         }
     }
 }
