--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -28,19 +28,30 @@
     display: flex;
     justify-content: center;
     margin-top: 40px;
+    padding-bottom: 40px;
 
     .arrow_up {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         position: absolute;
-        left: 100px;
-        top: 300px;
-        color: $white;
+        right: 80px;
+        top: 250px;
+        color: $primary;
         font-size: 3.5rem;
+        
+        span {
+            font-size: 1.4rem;
+            font-weight: 600;
+            font-family: 'Raleway', sans-serif;
+            color: $white;
+        }
     }
 
     .form {
         width: 500px;
-        height: 425px;
-        padding: 45px;
+        height: 450px;
+        padding: 50px;
         border-radius: 10px;
         border: 3px solid $grey-light;
 
@@ -114,12 +125,30 @@
             background-color: $secondary;
             border: none;
             border-radius: 8px;
+            padding-left: 0;
             cursor: pointer;
 
             &:hover {
                 color: $secondary;
                 background-color: $white;
             }
+        }
+
+        #submitted {
+            @extend #submit;
+            background-color: green;
+            
+            &:hover {
+                color: green;
+                background-color: $white;
+            }
+        }
+
+        .message_sent {
+            color: $white;
+            font-size: 1rem;
+            font-weight: 500;
+            text-align: center;
         }
     }
 }
