--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -55,11 +55,14 @@
             font-size: 1.3rem;
             border: none;
             padding: 3px 20px 3px 20px;
-            display: flex;
-            align-items: center;
-            gap: 10px;
             transition: 0.6s;
             
+            a {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+            }
+
             span {
                 font-family: 'Raleway', sans-serif;;
                 font-weight: 300;
