--- a/src/styles/components/_services.scss
+++ b/src/styles/components/_services.scss
@@ -40,3 +40,24 @@
         color: $primary;
     }
 }
+
+/* Media Queries */
+
+@media (max-width: 850px) {
+    .services_container {
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+        margin-top: 50px;
+
+        .services_item {
+            gap: 10px;
+            padding: 20px;
+        }
+    }
+}
+
+@media (max-width: 600px) {
+    .services_container {
+        grid-template-columns: 1fr;
+    }
+}
