--- a/src/styles/components/_banner.scss
+++ b/src/styles/components/_banner.scss
@@ -61,6 +61,10 @@
                     font-family: "Poppins", sans-serif;
                     padding: 4px;
                     align-items: center;
+
+                    &:hover {
+                        font-weight: bold;
+                    }
                 }
             }
         }
@@ -138,9 +142,16 @@
 
 /* Media Queries */
 
+@media (max-width: 900px) {
+    .banner_container .banner_text-container {
+        padding: 0px;
+    }
+}
+
 @media (max-width: 768px) {
     .banner_container {
         flex-direction:column-reverse;
+        gap: 50px;
 
         .banner_text-container {
             padding: 6px;
