--- a/src/styles/components/_services.scss
+++ b/src/styles/components/_services.scss
@@ -43,6 +43,12 @@
 
 /* Media Queries */
 
+@media (max-width: 1030px) {
+    .services_container .services_item {
+        padding: 20px;
+    }
+}
+
 @media (max-width: 850px) {
     .services_container {
         grid-template-columns: 1fr 1fr;
@@ -51,7 +57,6 @@
 
         .services_item {
             gap: 10px;
-            padding: 20px;
         }
     }
 }
