--- a/src/styles/components/_portfolio.scss
+++ b/src/styles/components/_portfolio.scss
@@ -108,5 +108,31 @@
         gap: 50px;
         margin-top: 50px;
         margin-bottom: 0;
+
+        .portfolio__item {
+            
+            .portfolio__description {
+                padding: 150px;
+            }
+
+            .buttons__container {
+                gap: 20px;
+                margin: auto;
+            }
+        }
+    }
+}
+
+@media (max-width: 700px) {
+    .portfolio_container .portfolio__item {
+            
+        .portfolio__description {
+            padding: 50px;
+        }
+
+        .buttons__container {
+            gap: 5px;
+            margin: initial;
+        }
     }
 }
