--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -14,8 +14,8 @@
     :after {
         content: "";
         display: block;
-        width: 150px;
-        height: 5px;
+        width: 9.37rem;
+        height: 0.31rem;
         background-color: $primary;
         margin: 10px auto 40px;
     }
@@ -60,7 +60,7 @@
             a {
                 display: flex;
                 align-items: center;
-                gap: 10px;
+                gap: 0.62rem;
             }
 
             span {
@@ -79,7 +79,7 @@
 .about_skills {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
+    gap: 1.25rem;
     padding: 20px;
 
     .skills_title {
@@ -97,12 +97,12 @@
         justify-content: center;
         align-items: center;
         padding: 30px;
-        font-size: 50px;
+        font-size: 3.12rem;
         color: $white;
         transition: 0.3s;
         
         span {
-            margin-top: 20px;
+            margin-top: 1.25rem;
             font-size: 1rem;
             font-family: "Poppins", sans-serif;
             font-weight: 500;
@@ -132,14 +132,14 @@
 @media (max-width: 600px) {
     .about_skills {
         grid-template-columns: 1fr 1fr;
-        gap: 10px;
+        gap: 0.62rem;
 
         .skills_title {
             grid-column-start: span 2;
         }
 
         .skill_item {
-            font-size: 40px;
+            font-size: 2.5rem;
             padding: 25px;
         }
     }
@@ -148,9 +148,10 @@
 @media (max-width: 370px) {
     .mobile_padding {
         width: 100%;
+        
         .about_skills {
             width: auto;
-            gap: 2px;
+            gap: 0.12rem;
         }
     }
     
@@ -159,7 +160,7 @@
 @media (max-width: 350px) {
     .about_skills {
         grid-template-columns: 1fr;
-        gap: 6px!important;
+        gap: 0.37rem!important;
 
         .skills_title {
             grid-column-start: span 1;
