--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -13,9 +13,11 @@ body {
     height: 100vh;
 }
 
+/* Navbar */
+
 header {
     width: 100%;
-    height: 60px;
+    height: 3.75rem;
 
     nav {
         position: fixed;
@@ -46,25 +48,25 @@ header {
 .navbar_logo-container {
     display: flex;
     align-items: center;
-    gap: 30px;
+    gap: 1.87rem;
     padding-left: 6rem;
-    margin-top: 3px;
-    margin-bottom: 3px;
+    margin-top: 0.18rem;
+    margin-bottom: 0.18rem;
 
     .logo_container {
         width: auto;
         height: auto;
 
         .navbar_logo {
-            width: 250px;
-            height: 96px;
+            width: 15.62rem;
+            height: 6rem;
             object-fit: contain;
         }
     }
     
     .desktop_flags img {
-        height: 35px;
-        width: 35px;
+        height: 2.18rem;
+        width: 2.18rem;
         object-fit: scale-down;
         filter: grayscale(70%);
         cursor: pointer;
@@ -91,7 +93,7 @@ header {
     
                 &:after {
                     content: "";
-                    height: 2px;
+                    height: 0.12rem;
                     width: 0;
                     background-color: $primary;
                     display: block;
@@ -133,7 +135,7 @@ header {
         width: 100%;
         background-color: $white;
         border-radius: 6px;
-        margin: 6px 2rem 0 2rem;
+        margin: 0.37rem 2rem 0 2rem;
 
         .navbar_list {
             flex-direction: column;
@@ -171,14 +173,14 @@ header {
 
 @media (max-width: 650px) {
     .navbar_logo-container {
-        width: 250px;
+        width: 15.62rem;
         display: flex;
         padding-left: 2rem;
         padding-right: 4rem;
 
         .navbar_logo {
-            width: 204px;
-            height: 138px;
+            width: 12.75rem;
+            height: 8.62rem;
         }
     }
 
@@ -189,19 +191,19 @@ header {
 
 @media (max-width: 400px) {
     .navbar_logo-container {
-        width: 170px;
+        width: 10.62rem;
     }
 }
 
 @media (max-width: 350px) {
     .navbar_logo-container {
-        width: 160px;
+        width: 10rem;
     }
 }
 
 @media (max-width: 318px) {
     .navbar_logo-container {
-        width: 120px;
+        width: 7.5rem;
         padding-left: 1rem;
     }
 
