--- a/src/styles/components/_services.scss
+++ b/src/styles/components/_services.scss
@@ -1,15 +1,17 @@
+/* Services */
+
 .services_container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
-    margin-top: 50px;
+    gap: 1.25rem;
+    margin-top: 3.12rem;
     
     .services_item {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 20px;
+        gap: 1.25rem;
         color: $white;
         background-color: rgb(53, 50, 50);
         padding: 30px;
@@ -52,11 +54,11 @@
 @media (max-width: 850px) {
     .services_container {
         grid-template-columns: 1fr 1fr;
-        gap: 10px;
-        margin-top: 50px;
+        gap: 0.62rem;
+        margin-top: 3.12rem;
 
         .services_item {
-            gap: 10px;
+            gap: 0.62rem;
         }
     }
 }
