modificacion en medida navbar mobile

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -216,3 +216,10 @@ header {
     }
 }
 
+@media (max-width: 240px) {
+    .navbar_logo-container {
+        width: 7rem;
+        padding-left: 1rem;
+    }
+}
+
