add second repository in portfolio card

--- a/src/styles/components/_portfolio.scss
+++ b/src/styles/components/_portfolio.scss
@@ -73,6 +73,7 @@
         .buttons__container {
             display: flex;
             align-items: center;
+            justify-content: center;
             gap: 0.31rem;
 
             .button {
